cluster/apps/ingress-nginx/networkpolicies/ingress-nginx-admission-create.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: egress-ingress-nginx-admission-create
  namespace: ingress-nginx
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/component: admission-webhook
  egress:
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "6443" # kube api
              protocol: TCP
